--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .custom-footer {
-    background-color: #dfe6d5; /* 淺綠大地色系 */
+    background-color: #dfe6d5; 
     color: #333;
     padding: 2rem;
     font-family: 'Segoe UI', sans-serif;
